# HandTracking_CPP

./: CMakeLists.txt  Mediapipe_practice.cpp  Mediapipe_practice.h  Mouse_event.h  OnnxModel.h  OnnxYolo.h  README.md  box_visualizer.h  camera.cpp
